# dumbphone-firmware-65C02

./: .gitignore  CMakeLists.txt  README.md
cmake/Modules/: Findjlink65c02.cmake
src/bootloader/: bootloader.65o
src/demo_phone/: demo_phone.65o  display_driver.65o  hmi_driver.65o  modem_driver.65o  ringer_driver.65o  vector_table.65o  via_driver.65o
src/demo_phone/virtual_devices/: merge_sort.h  status.h  stub.c  via.h  virtual_device.h  virtual_device_manager_create.c  virtual_device_manager_device_find.c  virtual_device_manager_device_register.c  virtual_device_manager_release.c  virtual_device_manager_sort.c  virtual_device_via_create.c  virtual_device_via_release.c
test/demo_phone/virtual_devices/: test_merge_sort.cpp  test_virtual_device_manager_device_find.cpp  test_virtual_device_manager_sort.cpp
